--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="textBlue">#264653</color>
-    <color name="bgColor">#e9c46a</color>
+    <color name="bgColor">#FFE4A2</color>
 </resources>
